Implementando a Curtida, Logout e Porcentagem de Players por Nível

--- a/site/public/login.html
+++ b/site/public/login.html
@@ -120,6 +120,7 @@
                         sessionStorage.nickPlayer = json[0].nick;
                         sessionStorage.emailUsuario = json[0].email;
                         sessionStorage.nivel = json[0].nomeNivel;
+                        sessionStorage.fkNivel = json[0].fkNivel
                         sessionStorage.foto = json[0].urlFoto
                         sessionStorage.plataforma = json[0].nomePlataforma;
                         sessionStorage.ultimaVisita = json[0].ultVisita;
