Fazendo ajustes: Tela Login e Logout

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -168,7 +168,7 @@
                         </div>
                     </div>
 
-                    <button>OBTER DICAS</button>
+                    <a href="./login.html"><button>OBTER DICAS</button></a>
 
                 </div>
             </div>
