--- a/site/public/user-local/index.html
+++ b/site/public/user-local/index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="../css/style-page-user.css">
 
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
 </head>
 
 <body>
@@ -258,7 +263,7 @@
 
 </html>
 
-
+<script src="../js/config-toast.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
 
@@ -286,11 +291,12 @@
     function logout() {
 
         atualizarVisita(Number(sessionStorage.idPlayer))
+        toastr.info('<b> Até logo! :) </b>')
 
         setTimeout(()=>{
             sessionStorage.clear();
             window.location = "../index.html";
-        }, 3000)
+        }, 2000)
 
     }
 
