Adicionando o coração vermelho do like

--- a/site/public/site-facul-1.html
+++ b/site/public/site-facul-1.html
@@ -18,6 +18,15 @@
         rel="stylesheet">
 </head>
 
+
+
+<model-viewer src="apple.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
+</model-viewer>
+
+
+
+
+
 <body>
 
     <!--header inicio-->
