Realizando alguns ajustes no código

--- a/site/public/about.html
+++ b/site/public/about.html
@@ -35,7 +35,7 @@
                 </a>
 
                 <a href="index.html#sugestoes">
-                    SUGESTÕES
+                    MINECRAFT
                 </a>
 
                 <a href="login.html">
@@ -182,7 +182,7 @@
                 </a>
 
                 <a href="index.html#sugestoes">
-                    SUGESTÕES
+                    MINECRAFT
                 </a>
             </div>
 
