--- a/site/public/index.html
+++ b/site/public/index.html
@@ -36,7 +36,7 @@
                 </a>
 
                 <a href="#sugestoes">
-                    SUGESTÕES
+                    MINECRAFT
                 </a>
 
                 <a href="login.html">
@@ -259,26 +259,11 @@
 
                 <div class="form" >
                     <div class="text-box">
-                        <h2>SUGESTÕES</h2>
-                        <p>Possui alguma sugestão para que nossa equipe melhore o site? Nos envie através desse
-                            formulário!</p>
-                    </div>
-
-                    <div class="form-box">
-                        <div class="input-email">
-                            <p>Email:</p>
-                            <input type="text">
-                        </div>
-
-
-                        <div class="input-text">
-                            <p>Mensagem:</p>
-                            <textarea name="" id="" cols="30" rows="10"></textarea>
-                        </div>
-
-                        <div class="form-button">
-                            <button>ENVIAR</button>
-                        </div>
+                        <h2>UM POUCO MAIS SOBRE O MINECRAFT</h2>
+                        <p>Minecraft é um jogo de construção em mundo aberto desenvolvido pela Mojang Studios onde jogadores interagem com um ambiente tridimensional totalmente modificável feito de blocos e entidades. Sua diversificada jogabilidade permite que os jogadores escolham a forma como jogam, permitindo inúmeras possibilidades.
+                            <br><br>
+                        O Minecraft possibilita o jogador explorar, interagir e modificar um mapa gerado dinamicamente feito de blocos de um metro cúbico de tamanho. Além de blocos, o ambiente possui plantas, criatura e itens. As mecânicas do jogo podem ser personalizadas através de modificações, complementos e pacotes de dados, texturas e recursos. 
+                        </p>
                     </div>
                 </div>
 
@@ -312,7 +297,7 @@
                 </a>
 
                 <a href="#sugestoes">
-                    SUGESTÕES
+                    MINECRAFT
                 </a>
             </div>
 
