Adicionando inserts no banco

--- a/site/public/user-local/index.html
+++ b/site/public/user-local/index.html
@@ -330,6 +330,11 @@
                         }
                     }
                 }
+            },
+            scale:{
+                y:{
+                    ticks: { stepSize: 1}
+                }
             }
         }
 
@@ -359,6 +364,11 @@
                             family: 'Noto Sans',
                         }
                     }
+                }
+            },
+            scale:{
+                y:{
+                    ticks: { stepSize: 1}
                 }
             }
         }
