--- a/site/public/about.html
+++ b/site/public/about.html
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="button">
-                    <button>OBTER DICAS</button>
+                    <a href="./login.html"><button>OBTER DICAS</button></a>
                 </div>
 
             </div>
