--- a/site/public/index.html
+++ b/site/public/index.html
@@ -59,10 +59,7 @@
                 </div>
             </div>
         </section>
-
-        <div class="onda-one">
-            <img src="assets/img/onda-1.png" alt="">
-        </div>
+        
     </div>
 
 
@@ -81,13 +78,13 @@
                         <img src="assets/img/minecraft-villager-1.png" alt="">
                     </div>
                     <div class="text-card">
-                        <p>A Mine Guide tem como objetivo mostrar de forma simples e clara, coisas que os jogadores podem fazer durante a sua jogatina. Claro, tudo isso com base no nível daquele jogador.</p>
+                        <p>A Mine Guide tem como objetivo mostrar de forma simples e clara, coisas que os jogadores podem fazer durante a sua jornada. Claro, tudo isso com base no nível daquele jogador.</p>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="text-card">
-                        <p>Nossa missão é fazer com que todos os tipos de jogadores possam desfurtar de nossas dicas, estimulando toda a criatividade e possibilidades que o jogo permite ter dentro dele. </p>
+                        <p>Nossa missão é fazer com que todos os tipos de jogadores possam desfrutar de nossas dicas, estimulando toda a criatividade e possibilidades que o jogo permite ter dentro dele. </p>
                     </div>
                     <div class="imagem">
                         <img src="assets/img/minecraft-villager-2.png" alt="" class="imagem-dois">
